argocd/templates/httproute.gotmpl.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-public-route
spec:
  parentRefs:
    - name: public-ingress-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: infra-network
  hostnames:
    - argocd.karafra.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          group: ''
          kind: Service
          port: 80
          weight: 1
