argocd/templates/virtual-service.gotmpl.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  namespace: argocd
  name: argocd-virtual-service
spec:
  hosts:
    - argocd.karafra.net
  gateways:
    - infra-network/public-ingress-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
